[gd_scene load_steps=4 format=3 uid="uid://dlwqrsnl15ffd"]

[ext_resource type="Texture2D" uid="uid://cih36tr8nbhpg" path="res://assets/lambda.svg" id="1_ry5dk"]
[ext_resource type="Script" uid="uid://d0iad3j0wt1od" path="res://lambda_elements/draggable_element/draggable_lambda.gd" id="2_ft6jr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmysy"]

[node name="LambdaElement" type="TextureRect"]
z_index = 1
texture = ExtResource("1_ry5dk")
script = ExtResource("2_ft6jr")

[node name="Area2D" type="Area2D" parent="."]

[node name="LambdaCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_nmysy")
disabled = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
